Dashboard/src/App.css
/* ... */
.refresh-container:hover {
  background-color: #c25246;
  border-bottom: 0.01em solid #c25246;
  cursor: pointer;
}

@keyframes rotate {
  to {
    transform: rotate(360deg);
  }
}

.refresh-container:hover .refresh {
  animation: rotate 1.5s linear infinite;
}

.refresh {
  width: 2.5rem;
}

/* 
====================================
GITHUB PANEL
==================================== 
*/

.github-entry {
  padding-bottom: 0.7em;
}

.github-entry span {
  white-space: pre;
}

.github-entry-details {
  display: flex;
  align-items: center;
}

.github-name {
  margin-left: -0.4em;
  color: #e74c3c;
  font-weight: 700;
}

.span-emphasis {
  display: inline-block;
  color: #3498db;
  font-weight: 700;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  max-width: 16rem;
  vertical-align: bottom;
}

.github-icon {
  height: 1.5em;
  width: 1.5em;
  margin-right: 1em;
}

.github-link:hover {
  color: #2980b9;
}

.github-message {
  margin-left: 2em;
  text-overflow: ellipsis;
  overflow: hidden;
}

.github-time {
  color: #2ecc71;
  display: inline-block;
}

/* 
====================================
OSTEPPY PANEL
==================================== 
*/

.eod-list h3:not(:first-child) {
  margin-top: 2rem;
}

.slack-icon {
  height: 1.5em;
  width: 1.5em;
  margin-right: 1em;
}

.slack-title {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 0.4em 0;
}

.slack-post {
  padding: 0 0.3em;
}

.slack-message {
  padding-bottom: 0.7em;
}

.slack-message a {
  text-decoration: none;
  color: #2ecc71;
  padding-bottom: 0.7em;
}

.slack-message a:hover {
  color: #27ae60;
}

/* 
====================================
INFRASTRUCTURE PANEL
==================================== 
*/

.ip-icon {
  height: 1.2em;
  width: 1.2em;
  margin-right: 0.5em;
  margin-bottom: -0.2em;
}

.infra-name {
  color: #3498db;
  font-weight: 700;
}

.ip-entry {
  padding-bottom: 0.2em;
}

.ip-up {
  color: #27ae60;
  font-weight: 700;
}

.ip-down {
  color: #e74c3c;
  font-weight: 700;
}

.infra-wrapper {
  display: grid;
}

.infra-column {
  grid-row: 1 / -1;
  padding-right: 0.5em;
  padding-left: 0.5em;
}

.infra-column:nth-child(2) {
  border-right: 1px solid #263544;
  border-left: 1px solid #263544;
}

.infra-box {
  padding: 0.2em;
}

/* 
====================================
LAMP PANEL
==================================== 
*/

.lamp-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.bulb-off {
  height: 10em;
  width: 10em;
}

.lamp-message {
  padding-top: 4rem;
  font-size: 2rem;
}

/* 
====================================
SCHEDULE PANEL
==================================== 
*/

.schedule-heading {
  padding: 0em 0 0.5em 0;
}

.schedule-content {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.schedule-topic {
  flex: 2;
}

.schedule-name {
  flex: 2;
}

.schedule-time {
  flex: 1;
}

/* 
====================================
PRESENTATIONS SECTION
==================================== 
*/

.presenter-section {
  width: 22em;
  font-size: 0.9em;
  display: flex;
}

.presenter-row {
  display: flex;
  justify-content: space-between;
}

.presenter-text {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.presenter-name {
  margin-left: -0.4em;
  color: #e74c3c;
  font-weight: 700;
}

.presenter-info {
  color: #3498db;
  font-weight: 700;
}

.presenter-entry {
  padding-bottom: 0.6em;
}

/* 
====================================
DB1042 SECTION
==================================== 
*/

.meeting-time {
  justify-content: flex-start;
  font-weight: 700;
  color: #1abc9c;
}

.meeting-topic {
  width: 33rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #f1c40f;
  margin-left: -0.4em;
}

.meeting-organizer {
  width: 20rem;
  justify-content: flex-end;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #e74c3c;
}

.meeting-icons {
  padding: 0 0.6em 0 0.4em;
  vertical-align: middle;
}

/* 
====================================
HELP WANTED PANEL
==================================== 
*/

.github-issue {
  margin-bottom: 2rem;
  border-width: 1px;
  display: block;
}

.github-issue__icon {
  height: 3rem;
  margin:0 .5rem;
  display: inline-block;
}

.github-issue__details {
  margin-bottom: 0;
  display: inline-block;
}

.github-issue__repo{
  color: #e74c3c;
  font-weight: bold;
}

.github-issue__number{
  color: grey;
}

.github-issue__name{
  color: #3498db;
  font-weight: bold;
}

.github-issue__avatar{
  height: 2.5rem;
  margin:0 3px;
}

.github-issue__assignees {
  margin-left: 4rem;
  margin-bottom: .5rem;
}

.github-issue__priority {
  margin-top: 0;
  margin-left: 4rem;
  margin-bottom: 1rem;
}

.github-issue__priority-critical {
  color: #e74c3c;
}

.github-issue__priority-high {
  color: orange;
}

.github-issue__priority-medium {
  color: yellow;
}

.github-issue__priority-low {
  color: green;
}

.github-issue__stack {
  display: inline-block;
  margin-left: 1rem;
}

.github-issue__stack__language {
  height: 2.5rem;
  width: 2.5rem;
  margin-left:1rem;
}

/* 
====================================
SPINNER
==================================== 
*/

.spinner-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.lds-spinner {
  color: official;
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}

.lds-spinner div {
  transform-origin: 32px 32px;
  animation: lds-spinner 1.2s linear infinite;
}

.lds-spinner div:after {
  content: " ";
  display: block;
  position: absolute;
  top: 3px;
  left: 29px;
  width: 5px;
  height: 14px;
  border-radius: 20%;
  background: #fff;
}

.lds-spinner div:nth-child(1) {
  transform: rotate(0deg);
  animation-delay: -1.1s;
}

.lds-spinner div:nth-child(2) {
  transform: rotate(30deg);
  animation-delay: -1s;
}
/* ... */

